test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-15 21:33:57.359433

